# yojip

./: AGENTS.md  README.md  pyproject.toml
yojip/: __main__.py
